--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&family=Uncial+Antiqua&display=swap" rel="stylesheet">
   <!-- FONT-AWESOME -->
   <script src="https://kit.fontawesome.com/9da8c08b41.js" crossorigin="anonymous"></script>
 
@@ -53,12 +56,12 @@
 
 
 <!-- Title -->
-<section id="Title" style= "background-color : #F0E161">
+<section id="Title" style= "background-color : #1B2430">
   <div class="container-fluid">
   <div class="row">
     <div class="col-lg-6 col-md-12 col-sm-12">
       <!-- title of the game -->
-      <h1 id="shithole">PRO-ANTAGONISTS</h1>
+      <h1 id="shithole">Release the Kraken</h1>
       <!-- Download buttons -->
       <a href="https://mega.nz/folder/U5FgVLYD#vtLxLrMk88efikUI6J3FEA">
       <button type="button" class="btn btn-outline-dark btn-lg download-button" id="kaala-kar"><i class="fa-solid fa-gamepad padd"></i> Download</button>
@@ -68,7 +71,7 @@
     <br>
     <!-- GOD OF WAR -->
     <div class="col-lg-6 col-md-12 col-sm-12">
-      <img class="floatkarenge" src="images/damnnn.jpg" alt="startgames">
+      <img class="floatkarenge" src="images/kraken.jpg" alt="startgames">
     </div>
   </div>
   </div>
@@ -153,51 +156,36 @@
 
   <!-- Pricing -->
 <section id="pricing">
-<h2 class="cry">Simple and affordable price plans for you</h2>
-<div class="row">
-<!-- the three boxes with money related stuff -->
-<div class="col-lg-4 col-md-6">
-<div class="card">
-<div class="card-body">
-<h5 class="card-title">Player</h5>
-<h6 class="card-subtitle mb-2 text-muted">Free</h6>
-<p class="card-text">Enjoy the game only</p>
-<p class="card-text">Single Characters</p>
-<p class="card-text">Limited App Usage</p>
-<a href="#" class="btn btn-light ">Register</a>
-<a href="#" class="btn btn-dark">Sign Up</a>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6">
-<div class="card" >
-<div class="card-body">
-<h5 class="card-title">Novice</h5>
-<h6 class="card-subtitle mb-2 text-muted">999 Rs/yr</h6>
-<p class="card-text">Enjoy without any advertisements</p>
-<p class="card-text">Multiple Characters</p>
-<p class="card-text">Unlimited App Usage</p>
-<a href="#" class="btn btn-light">Register</a>
-<a href="#" class="btn btn-dark">Sign Up</a>
-</div>
-</div>
-</div>
-  <div class="col-lg-4">
-<div class="card">
-<div class="card-body">
-  <h5 class="card-title">Samaritan</h5>
-  <h6 class="card-subtitle mb-2 text-muted">Any amount is accepted</h6>
-  <p class="card-text">Premium access to all our future works</p>
-  <p class="card-text">Goes for a good cause</p>
-  <p class="card-text">Unlimited App Usage</p>
-  <a href="#" class="btn btn-light">Register</a>
-  <a href="#" class="btn btn-dark">Sign Up</a>
-</div>
-</div>
-</div>
-</div>
+  <div class="card mb-3 seeyousoon" style="max-width: 540px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="images/heyda.png" class="img-fluid rounded-start badaho" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h4 class="card-title">🖋 Sign in 🖋</h4>
+          <p class="card-text">Sign-in to get more updates about what I'm doing!!💖</p>
+          <a href="https://mail.google.com/">
+          <button type="button" class="buttondk">Sign-in</button>
+        </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
+<section id="steps">
+<div class="joannereubenkavaava">
+  <h1 class= "khushisemaardaalegi">Steps</h1>
+<p class= "khushisemaardaalegi">Steps to install the game:-<br>
+1: Download the file using the above button.<br>
+2: Download the file as a zip file.<br>
+3: Once,downladed extract the files to a proper location.<br>
+4: After extraction, click on the .exe file to play the game.<br>
+5: If Windows doesn't allow you to play the game, click on more info ---> Run Anyway.<br>
+</p>
+</div>
+</section>
 
 <!-- Call to Action -->
 <section id="cta">
